Setup wrapper batch files to manage the portable environment

--- a/App/AppInfo/Launcher/CygwinSetupPortable.ini
+++ b/App/AppInfo/Launcher/CygwinSetupPortable.ini
@@ -1,18 +1,8 @@
 [Launch]
-ProgramExecutable=Cygwin\setup-x86.exe
-ProgramExecutable64=Cygwin\setup-x86_64.exe
-CommandLineArguments=' --no-admin --no-shortcuts --no-replaceonreboot --package-manager --root "%PAL:PortableAppsBaseDir%\Cygwin\arch-%PROCESSOR_ARCHITECTURE%%PROCESSOR_ARCHITEW6432%"  --local-package-dir "%PAL:PortableAppsBaseDir%\Cygwin\packages" --wait '
+ProgramExecutable=Cygwin\CygwinSetupPortable.bat
+HideCommandLineWindow=true
+SinglePortableAppInstance=true
+SingleAppInstance=true
 SupportsUNC=no
 DirectoryMoveOK=yes
 NoSpacesInPath=true
-
-[Environment]
-HOME=/home
-
-[Activate]
-Registry=true
-
-[RegistryKeys]
--=HKCU\SOFTWARE\Cygwin
--=HKLM\SOFTWARE\Cygwin
--=HKLM\SYSTEM\CurrentControlSet\Control\Lsa\Authentication Packages
