Prevent Cygwin Setup and Console from running concurrently
To ensure that the registry of the host system can be properly restored to its original state, “Cygwin Setup & Updater” and “Cygwin Console” canNOT be running at the same time.

--- a/App/AppInfo/Launcher/CygwinSetupPortable.ini
+++ b/App/AppInfo/Launcher/CygwinSetupPortable.ini
@@ -6,3 +6,12 @@ SingleAppInstance=true
 SupportsUNC=no
 DirectoryMoveOK=yes
 NoSpacesInPath=true
+CloseEXE=CygwinConsole.exe
+
+[Activate]
+Registry=true
+
+[RegistryKeys]
+-=HKCU\SOFTWARE\Cygwin
+-=HKLM\SOFTWARE\Cygwin
+-=HKLM\SYSTEM\CurrentControlSet\Control\Lsa\Authentication Packages
